--- a/Sum/.htaccess
+++ b/Sum/.htaccess
@@ -11,7 +11,7 @@
 
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^\.]+)$ $1.php [NC,L]
+RewriteRule ^([^\.]+)$ $1.html [NC,L]
 
 
 <IfModule mod_expires.c>
@@ -20,9 +20,9 @@ RewriteRule ^([^\.]+)$ $1.php [NC,L]
 	ExpiresByType image/jpeg "access plus 24 hours"
 	ExpiresByType image/gif "access plus 24 hours"
 	ExpiresByType image/png "access plus 24 hours"
-	ExpiresByType text/css "access plus 24 hours"
+	ExpiresByType text/css "access plus 1 minute"
 	ExpiresByType application/pdf "access plus 1 week"
-	ExpiresByType text/javascript "access plus 24 hours"
+	ExpiresByType text/javascript "access plus 1 minute"
 	ExpiresByType text/html "access plus 2 hours"
 	ExpiresByType image/x-icon "access plus 1 year"
 	ExpiresDefault "access plus 24 hours"
